--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
    <!--Navigation-->
    <nav class="navbar bg-primary  fixed-top">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">Divine Guidance</a>
+      <a class="navbar-brand" href="#">Tarot by Sarabhi</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
         <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Divine Guidance by Sarabhi</h5>
+          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Tarot by Sarabhi</h5>
           <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
         </div>
         <div class="offcanvas-body">
@@ -72,7 +72,7 @@
         <div class="about_me">
             <div class="innerabout_me">
                 <p>I am</p>
-                <p id="typer">Surabhi</p>
+                <p id="typer">Surabhi Das</p>
             </div>
             <p>
                 Over the years, I have honed my intuitive gifts and combined them with disciplined study in various metaphysical sciences. I specialize in Date of Birth (DOB) analysis and mobile number correction, helping you align your vibrational blueprint with your life goals. These subtle adjustments often lead to noticeable shifts in energy, communication, and opportunities.
