--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
    <div class="section" id="about_me">
     <div class="header"><h1>About Me</h1></div>
     <div class="introduction">
-        <div class="about_me"><img src="./pc.jpg" id="image_profile"></div>
+        <div class="about_me">
+          <img src="./pc.jpg" id="image_profile">
+        <quote class="quote">“Your visions will become clear only when you can look into your own heart. Who looks outside, dreams; who looks inside, awakes.”
+          — Carl Jung</quote>
+        </div>
         <div class="about_me">
             <div class="innerabout_me">
                 <p>I am</p>
