--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     </div>
     <div class="prices">
       <h1>To know more about Pricing</h1>
-<button><a href="./Black Colorful Vintage Illustrative Astrology Marketing Infographic.pdf">Click Here</button></a>
+<button><a href="./prices.jpg">Click Here</button></a>
     </div>
    </div>
    <!---------------->
