--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     <div class="header"><h1>About Me</h1></div>
     <div class="introduction">
         <div class="about_me">
-          <img src="./profile_pc.jpg" id="image_profile">
+          <img src="./profile_pic.jpg" id="image_profile">
         <quote class="quote">“Your visions will become clear only when you can look into your own heart. Who looks outside, dreams; who looks inside, awakes.”
           — Carl Jung</quote>
         </div>
