--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
       <div class="sections">
         <p><a href="mailto:surabhaidas35@gmail.com">surabhaidas35@gmail.com</a></p>
         <div class="social_media">
-          <a href=""><i class="fa-brands fa-facebook-f"></i></a>
+          <a href="https://www.facebook.com/surabhi.das.1293?rdid=6TbDCrqeDDnEqIym&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F16nPA42uWt%2F#"><i class="fa-brands fa-facebook-f"></i></a>
           <a href="https://www.instagram.com/surabhidas1176?utm_source=ig_web_button_share_sheet&igsh=MWlnYzM5ZGVubzJhaA=="><i class="fa-brands fa-instagram" style="color: #c412a3;"></i></i></a>
         </div>
       </div>
